<resources>
    <string name="app_name">SENGOD</string>
    <string name="activity_start_btn_start">开启蓝牙\n连接你的机器人</string>
    <string name="activity_main_title">主页</string>
    <string name="activity_main_param_setting">参数\n设置</string>
    <string name="activity_main_btn_left1">无纠偏\n操作</string>
    <string name="activity_main_btn_right1">有纠偏\n操作</string>
    <string name="activity_main_btn_left2">动态\n测试</string>
    <string name="activity_main_btn_right2">数据\n记录</string>
    <string name="activity_main_robot_id">机器人ID:</string>
    <string name="activity_first_connect_title">初次通讯连接</string>
    <string name="activity_first_connect_robot_id">机器人ID号码设置</string>
    <string name="activity_first_connect_robot_id_hint">0000~9999</string>
    <string name="activity_first_connect_next">下一步</string>
    <string name="activity_data_record_title">数据记录</string>
    <string name="activity_data_record_factory_time">出厂时间</string>
    <string name="activity_data_record_factory_time_data">%1$s年/%2$s月/%3$s日</string>
    <string name="activity_data_record_version">软件版本号</string>
    <string name="activity_data_record_factory_version_data">%1$s.%2$s</string>
    <string name="activity_data_record_total_charging_times">充电总次数</string>
    <string name="activity_data_record_total_charging_times_data">%1$d次</string>
    <string name="activity_data_record_use_time">小车实际使用时间累积（含充电时间）</string>
    <string name="activity_data_record_use_time_data">%1$d小时%2$2d分</string>
    <string name="activity_data_record_walk_time">小车行走时间累积</string>
    <string name="activity_data_record_walk_time_data">%1$d小时%2$2d分</string>
    <string name="activity_data_record_carry_time">实际载物时间累积</string>
    <string name="activity_data_record_carry_time_data">%1$d小时%2$2d分</string>
    <string name="activity_data_record_lift_time">实际顶升总次数</string>
    <string name="activity_data_record_lift_time_data">%1$d次</string>
    <string name="activity_dynamic_test_title">动态测试</string>
    <string name="activity_dynamic_test_pressure_switch1">压力波开关1</string>
    <string name="activity_dynamic_test_pressure_switch2">压力波开关2</string>
    <string name="activity_dynamic_test_emergency_stop1">急停1\u3000\u3000\u3000</string>
    <string name="activity_dynamic_test_emergency_stop2">急停2\u3000\u3000\u3000</string>
    <string name="activity_dynamic_test_charge1">充电插座1\u3000</string>
    <string name="activity_dynamic_test_charge2">充电插座2\u3000</string>
    <string name="activity_dynamic_test_charge3">充电插座3\u3000</string>
    <string name="activity_dynamic_test_battery_voltage">电池电压</string>
    <string name="activity_dynamic_test_battery_voltage_data">%1$sV</string>
    <string name="activity_dynamic_test_battery_temperature">电池温度</string>
    <string name="activity_dynamic_test_battery_temperature_data">%1$d℃</string>
    <string name="activity_dynamic_test_obstacle_distance">障碍物监测距离</string>
    <string name="activity_dynamic_test_obstacle_distance_data">%1$dm</string>
    <string name="activity_dynamic_test_walking_servo1">行走伺服1</string>
    <string name="activity_dynamic_test_walking_servo_state">状态</string>
    <string name="activity_dynamic_test_walking_servo_state_data">故障</string>
    <string name="activity_dynamic_test_walking_current">工作电流</string>
    <string name="activity_dynamic_test_walking_current_data">%1$sA</string>
    <string name="activity_dynamic_test_walking_servo2">行走伺服2</string>
    <string name="activity_dynamic_test_rotate_servo">旋转伺服</string>
    <string name="activity_dynamic_test_rotate_servo_state">状态</string>
    <string name="activity_dynamic_test_rotate_servo_state_data">停止</string>
    <string name="activity_dynamic_test_rotate_current">工作电流</string>
    <string name="activity_dynamic_test_rotate_current_data">%1$sA</string>
    <string name="activity_param_setting_title">参数设置</string>
    <string name="activity_param_setting_noload">空载加减速参数</string>
    <string name="activity_param_setting_speed_up">加速</string>
    <string name="edit_default_hint">0000</string>
    <string name="activity_param_setting_speed_down">减速</string>
    <string name="activity_param_setting_load">带载加减速参数</string>
    <string name="activity_param_setting_lift">顶升</string>
    <string name="activity_param_setting_height">高度</string>
    <string name="activity_param_setting_speed">速度</string>
    <string name="activity_param_setting_height_unit">mm</string>
    <string name="activity_param_setting_speed_unit">mm/s</string>
    <string name="activity_param_setting_obstacle_detection">障碍物检测控制参数</string>
    <string name="activity_param_setting_speed_down_distance">减速距离</string>
    <string name="activity_param_setting_speed_down_acc">减速加速度</string>
    <string name="activity_param_setting_rotation_speed">旋转速度(m/s)</string>
    <string name="activity_param_setting_wheel_diameter">车轮直径</string>
    <string name="activity_param_setting_wheel_left">左轮</string>
    <string name="activity_param_setting_wheel_right">右轮</string>
    <string name="activity_no_rectifying_operation_title">无纠偏操作</string>
    <string name="activity_no_rectifying_operation_address_qrcode">地址\n二维码</string>
    <string name="activity_no_rectifying_operation_address">地址</string>
    <string name="activity_no_rectifying_operation_address_math">(x,y)</string>
    <string name="activity_no_rectifying_operation_coordinate">坐标</string>
    <string name="activity_no_rectifying_operation_coordinate_math">(△x,△y,θ)</string>
    <string name="activity_no_rectifying_coordinate_unit1">mm</string>
    <string name="activity_no_rectifying_coordinate_unit2">°</string>
    <string name="activity_no_rectifying_operation_shelves_qrcode">货架\n二维码</string>
    <string name="activity_no_rectifying_operation_shelves_id">货架ID</string>
    <string name="activity_no_rectifying_operation_forward">前进</string>
    <string name="activity_no_rectifying_operation_back">后退</string>
    <string name="activity_no_rectifying_operation_turn_left">左转90°</string>
    <string name="activity_no_rectifying_operation_turn_right">右转90°</string>
    <string name="activity_no_rectifying_distance">距离\n(mm)</string>
    <string name="activity_no_rectifying_speed">速度\n(mm/s)</string>
    <string name="activity_no_rectifying_operation_counter_clockwise">同步逆时90°</string>
    <string name="activity_no_rectifying_operation_clockwise">同步顺时90°</string>
    <string name="activity_no_rectifying_operation_up">上\n升</string>
    <string name="activity_no_rectifying_operation_turn_down">下\n降</string>
    <string name="activity_choose_robot_title">选择机器人</string>
    <string name="activity_choose_robot_bluetooth">蓝牙</string>
    <string name="activity_choose_robot_choose_robot">选取机器人...</string>
    <string name="activity_choose_robot_queding">确定</string>
    <string name="exit">再按一次返回键退出！</string>
    <string name="activity_rectifying_operation_title">有纠偏操作</string>
    <string name="activity_rectifying_operation_left">左进\n定位</string>
    <string name="activity_rectifying_operation_right">右进\n定位</string>
    <string name="activity_rectifying_operation_top">前进\n定位</string>
    <string name="activity_rectifying_operation_bottom">后退\n定位</string>
    <string name="activity_rectifying_operation_center">旋转\n定位</string>
    <string name="activity_dynamic_test_jacking_servo">顶升伺服</string>
    <string name="activity_dynamic_test_jacking_servo_state">状态</string>
    <string name="activity_dynamic_test_jacking_servo_state_data">故障</string>
    <string name="activity_dynamic_test_jacking_current">工作电流</string>
    <string name="activity_dynamic_test_jacking_current_data">%1$sA</string>
    
    <string name="activity_common_init">初始化</string>
    <string name="activity_common_disconnect">连接断开</string>
    <string name="activity_common_connecting">正在连接</string>
    <string name="activity_common_stop">停止</string>
    <string name="activity_common_run">运行</string>
    <string name="activity_common_prerun">预运行</string>
    <string name="activity_common_unknown">未知</string>
    <string name="activity_param_setting_confirm">确定</string>
    <string name="activity_rectifying_operation_devi_correction_P">纠偏修正\nP参数</string>
    <string name="activity_rectifying_operation_devi_correction_L">纠偏修正\nL参数</string>

    <string name="errorMsg">CRC校验出错！</string>
    <string name="errorMsg1">功能码错误！</string>
    <string name="errorMsg2">长度错误！</string>
    <string name="errorMsg3">内部错误！</string>
    <string name="errorMsg4">应答！</string>
    <string name="errorMsg5">从站忙！</string>
    <string name="errorMsg6">CRC校验错误！</string>
    <string name="errorMsg7">数据范围错误！</string>
    <string name="errorMsg8">协议ID错误！</string>
    <string name="errorMsg9">数据长度错误！</string>
    <string name="errorMsg10">命令执行失败！</string>
    <string name="errorMsg11">数据解析出错！</string>
    <string name="disconnected">蓝牙已断开\n请重新连接</string>
    <string name="disconnected_ok">重新连接</string>
    <string name="disconnected_exit">退出程序</string>
    <string name="bluetooth_reconnected">重新连接...</string>
    <string name="first_connect">正在连接...</string>
</resources>
