<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sengod.sengod.ui.activity.ChooseRobotActivity">

    <RelativeLayout
        android:id="@+id/rl_choose_robot_first"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F5F5F5"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back_data_record" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_choose_robot_title"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />
    </RelativeLayout>

    <view
        class="android.view.View"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/rl_choose_robot_first"
        android:background="@drawable/activity_main_title_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_choose_robot_first"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <view
            class="android.view.View"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/activity_choose_robot_bluetooth"
                android:textColor="@color/colorBlack"
                android:textSize="26sp" />

            <Switch
                android:id="@+id/sw_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:checked="false" />
        </RelativeLayout>

        <view
            class="android.view.View"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:background="#CCCCCC" />

        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/lv_connect_history"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        </com.baoyz.swipemenulistview.SwipeMenuListView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/activity_choose_robot_choose_robot"
            android:textColor="#717171" />

        <ListView
            android:id="@+id/lv_search_result"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start_shape"
                android:text="@string/activity_choose_robot_queding"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
